--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1947,3 +1947,34 @@ form .btn {
         font-size: 32px;
     }
 }
+.drop {
+    height: 5px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    margin: 0 auto;
+    z-index: 99;
+    text-align: center;
+    display: none;
+    i {
+        font-size: 14px;
+        background: rgb(39, 36, 37);
+        background: -moz-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: -webkit-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: -o-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: -ms-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        padding: 2px 10px;
+        color: #FFF;
+        cursor: pointer;
+    }
+    .fa-caret-up {
+        display: none;
+    }
+}
+.nav-bar-fixed {
+    position: fixed;
+    top: 0;
+    z-index: 9;
+    width: 100%;
+}
