--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -213,8 +213,8 @@ a:hover {
     background-color: #8cc344 !important;
     padding-top: 25px !important;
     a {
-       color: #FFF !important;
-   }  
+     color: #FFF !important;
+ }  
 }
 #myNavbar {
     background: rgb(39, 36, 37);
@@ -366,7 +366,7 @@ a:hover {
                             border-top-right-radius: 0 !important;
                             background: #8cc344;
                             &:hover {
-                                background: none;
+                                background: #8cc344;
                                 color: #FFF;
                             }
                         }
@@ -400,8 +400,15 @@ a:hover {
 .fmenu {
     position: absolute;
     top: 0;
-    right: 200px;
+    right: 200px; 
     width: 60px !important;
+    padding-left: 10px;
+    &:hover {
+        background-color: #8cc344 !important;
+        a {
+            color: #FFF !important;
+        }
+    }
 }
 .wrapper {
     margin-top: -35px;
@@ -445,9 +452,9 @@ a:hover {
     &:hover {
         #slider-1 {
             h1 {
-               color: #E9204A;
-           } 
-           h2 {
+             color: #E9204A;
+         } 
+         h2 {
             color: #000;
         }
     }
@@ -474,12 +481,12 @@ a:hover {
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   height:100%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ height:100%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -492,9 +499,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
- color:#898B8E;
+   color:#898B8E;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -544,7 +551,7 @@ a:hover {
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -581,28 +588,28 @@ a:hover {
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:-5px;
-   -webkit-transition: all 1s ease 0s; 
-   transition: all 1s ease 0s;
-   .btn {
-     display:inline-block;
-     padding-top:5px;
-     font-size:15px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:60px;
-     width:125px;
-     border-radius: 100px 100px 0 0;
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:-5px;
+ -webkit-transition: all 1s ease 0s; 
+ transition: all 1s ease 0s;
+ .btn {
+   display:inline-block;
+   padding-top:5px;
+   font-size:15px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:60px;
+   width:125px;
+   border-radius: 100px 100px 0 0;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -685,15 +692,15 @@ a:hover {
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
- }
- &:hover{
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -701,8 +708,8 @@ a:hover {
 
     }
     .key {
-       color:#e9214b;
-   }
+     color:#e9214b;
+ }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -731,22 +738,22 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .quarter, .quarter2 {
     &:hover {
-     .overlay{
+       .overlay{
         display:none;
     }
     .outimg {
-       -webkit-transform:scale(1.1);
-       -moz-transform:scale(1.1);
-       transform:scale(1.1);
-       -o-transform:scale(1.1);
-   }
-   .post-navigate {
+     -webkit-transform:scale(1.1);
+     -moz-transform:scale(1.1);
+     transform:scale(1.1);
+     -o-transform:scale(1.1);
+ }
+ .post-navigate {
     bottom:0px;
 
 }
@@ -961,16 +968,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-         display: block;
-         margin: 0;
-         padding: 0;
-         top: 0;
-         position: relative;
-         min-width: none;
-         width: auto;
-     }
- }
- .social-block {
+           display: block;
+           margin: 0;
+           padding: 0;
+           top: 0;
+           position: relative;
+           min-width: none;
+           width: auto;
+       }
+   }
+   .social-block {
     min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
@@ -983,14 +990,14 @@ a:hover {
         text-align: center;
     }
     p {
-     font-size: 14px;
-     width: 98%;
-     background-color: #4c4b4c;
-     margin: 0;
-     padding: 16px 17px;
-     margin-bottom: 2px;
- }
- .last {
+       font-size: 14px;
+       width: 98%;
+       background-color: #4c4b4c;
+       margin: 0;
+       padding: 16px 17px;
+       margin-bottom: 2px;
+   }
+   .last {
     border: none;
 }
 }
@@ -1179,12 +1186,13 @@ a:hover {
             padding-top: 60px;
             box-sizing: border;
             border-bottom: 1px solid #575656; 
+            cursor: pointer;
             @media (max-width: 769px) {
-               box-sizing: border;
-               border-bottom: 1px solid #575656; 
-           }
-       }
-   }
+             box-sizing: border;
+             border-bottom: 1px solid #575656; 
+         }
+     }
+ }
 }
 .home .footer {
     margin-top: 0;
@@ -1361,10 +1369,10 @@ a:hover {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-               color: #e91f4a;   
-           }
-       }
-   }
+             color: #e91f4a;   
+         }
+     }
+ }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1463,10 +1471,10 @@ a:hover {
 
 }
 .date_filter {
- display: inline;
- margin:0px;
+   display: inline;
+   margin:0px;
 
- .caret {
+   .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1556,19 +1564,19 @@ a:hover {
     }
 }
 .side-transparent-block {
-   height: 150px;
-   width: 280px;
-   background-color: rgba(0, 0, 0, 0.8);
-   position: absolute;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   text-align: center;
-   top: 0;
-   left: 0;
-   z-index: 9;
-   display: none;
-   @media (max-width: 769px) {
+ height: 150px;
+ width: 280px;
+ background-color: rgba(0, 0, 0, 0.8);
+ position: absolute;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ top: 0;
+ left: 0;
+ z-index: 9;
+ display: none;
+ @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1608,10 +1616,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-             color: #e91f4a;
-         }
-     }
- }
+               color: #e91f4a;
+           }
+       }
+   }
 }
 .subhead {
     h3 {
@@ -1635,26 +1643,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
- display: inline-block;
- margin-left:0px;
- color: #807f7f;
- font-weight: bold;
- padding: 0;
- border: 0px;
- border-left:1px solid #E8E8E7;
- height: 35px;
- border-radius: 0;
- width: 130px;
- -moz-appearance: none;
- -webkit-appearance: none;
- -webkit-border-radius: 0px;
- -moz-border-radius: 0px;
- border-radius: 0px;
- position: absolute;
- background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
- border-right: 10px solid transparent;
+   display: inline-block;
+   margin-left:0px;
+   color: #807f7f;
+   font-weight: bold;
+   padding: 0;
+   border: 0px;
+   border-left:1px solid #E8E8E7;
+   height: 35px;
+   border-radius: 0;
+   width: 130px;
+   -moz-appearance: none;
+   -webkit-appearance: none;
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   position: absolute;
+   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+   border-right: 10px solid transparent;
 
- &:hover {
+   &:hover {
     span {
         color: #FFF;
     }
@@ -1797,10 +1805,66 @@ form .btn {
     width: 20px !important;
     height: 20px !important;
 }
-
-
-
-
+.newsletter {
+    cursor: pointer;
+}
+.newsletter-popup {
+    position: fixed;
+    top: 0;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99;
+    opacity: 0.9;
+    display: none;
+    .close-newsletter {
+        color: #FFF;
+        position: absolute;
+        right: 20px;
+        top:20px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    label {
+        color: #FFF;
+    }
+    input {
+        height: 25px;
+        border: 1px solid #ccc;
+        padding: 5px;
+        color: #807f7f
+    }
+    .button {
+        background-color: #e91f4a !important;
+        color: #FFF !important;
+        border-radius: 0 !important; 
+        padding: 8px;
+        &:hover {
+            opacity: 0.7;
+        }
+    }
+}
+.wpcf7-form {
+    textarea {
+        float: none;
+    }
+    input {
+        padding: 5px;
+    }
+    .wpcf7-submit {
+        background-color: #e91f4a !important;
+        color: #FFF !important;
+        border-radius: 0 !important; 
+        padding: 8px;
+        border: none;
+        &:hover {
+            opacity: 0.7;
+        }
+    }
+}
 @media(max-width:991px) {
     #myNavbar .nav {
         font-size: 10px;
@@ -1816,6 +1880,9 @@ form .btn {
     }
 }
 @media(max-width:769px) {
+    .page-wrapper {
+        padding: 10px;
+    }
     .subhead {
         border-bottom: 1px solid #f6f6f6;
         padding-bottom: 50px;
@@ -1861,4 +1928,69 @@ form .btn {
         left: 290px;
         height: 35px;
     }
+}
+.back-to-top {
+    border: 2px solid #e91f4a;
+    border-radius: 18px 18px;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    align-items: center;
+    margin-right: 20px;
+    i {
+        color: #e91f4a;
+        font-size: 32px;
+    }
+}
+.go-down {
+    border: 2px solid #FFF;
+    border-radius: 18px 18px;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    align-items: center;
+    margin-right: 20px;
+    position: absolute;
+    z-index: 99;
+    bottom: 10px;
+    right: 0;
+    i {
+        color: #FFF;
+        font-size: 32px;
+    }
+}
+.drop {
+    height: 5px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    margin: 0 auto;
+    z-index: 99;
+    text-align: center;
+    display: none;
+    i {
+        font-size: 14px;
+        background: rgb(39, 36, 37);
+        background: -moz-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: -webkit-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: -o-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: -ms-linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        background: linear-gradient(0deg, #231F20 35%, #46464A 100%);
+        padding: 2px 10px;
+        color: #FFF;
+        cursor: pointer;
+    }
+    .fa-caret-up {
+        display: none;
+    }
+}
+.nav-bar-fixed {
+    position: fixed;
+    top: 0;
+    z-index: 9;
+    width: 100%;
 }
