--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -213,8 +213,8 @@ a:hover {
     background-color: #8cc344 !important;
     padding-top: 25px !important;
     a {
-     color: #FFF !important;
- }  
+       color: #FFF !important;
+   }  
 }
 #myNavbar {
     background: rgb(39, 36, 37);
@@ -231,6 +231,9 @@ a:hover {
         margin-left: 50px;
         max-height: 35px;
         font-size: 12px; 
+        @media(max-width:900px) {
+            margin-left: 0;
+        }
         .dropdown-menu {
           padding: 0 0 2% 8%;
           margin-top: -3px !important;
@@ -255,6 +258,12 @@ a:hover {
         max-height: 35px;
         overflow: hidden;
         width: 120px;
+        @media(max-width:1200px) {
+            width: 80px;
+        }
+        @media(max-width:900px) {
+            width: auto;
+        }
         a {
             color: @fontColor;
             margin: 0;
@@ -262,38 +271,47 @@ a:hover {
             font-family: 'allerregular';
             font-size: 12px;
             letter-spacing: 0;
-            .caret {
-                position: absolute;
-                right: 8px;
-                top: 15px;
+            @media(max-width:1200px) {
+               font-size: 10px;
+           }
+           @media(max-width:900px) {
+               font-size: 8px;
+           }
+           .caret {
+            position: absolute;
+            right: 8px;
+            top: 15px;
+            @media(max-width:800px) {
+               right: 8px;
+           }
+       }
+   }
+   &:hover {
+    .dropdown-menu {
+        background-color: #8cc344;
+        li {
+            &:last-child {
+                border-right: none;
             }
         }
-        &:hover {
-            .dropdown-menu {
-                background-color: #8cc344;
-                li {
-                    &:last-child {
-                        border-right: none;
-                    }
-                }
-            }
-            a {
-                background-color: #8cc344;
-                color:#FFF;
-            }
-        }
-        &:last-child {
-            border-right: 1px Solid #6d6d6d;
-        }
+    }
+    a {
+        background-color: #8cc344;
+        color:#FFF;
+    }
+}
+&:last-child {
+    border-right: 1px Solid #6d6d6d;
+}
 
-    }
-    @media (max-width: 850px) {
-        font-size: 10px;
-        margin-left: 30px;
-    }
-    .first {
-        border-left: 1px Solid #484848;
-    }
+}
+@media (max-width: 850px) {
+    font-size: 10px;
+    margin-left: 30px;
+}
+.first {
+    border-left: 1px Solid #484848;
+}
 }
 }
 .right-menu {
@@ -304,6 +322,9 @@ a:hover {
         display: inline-flex;
         width: 100px;
         border-right: 1px Solid #484848;
+        @media(max-width:1200px) {
+            width: 80px;
+        }
         a {
             color: #cecece;
             margin: 0;
@@ -312,69 +333,75 @@ a:hover {
             display: flex;
             font-size: 13px;
             letter-spacing: 0;
-        }
-        .languageSelector {
-            font-size: 13px;
-            letter-spacing: 0;
-            font-family: 'allerregular';
-            height: 35px;
-            position: absolute;
-            top: 0;
-            left: 0;
+            @media(max-width:1200px) {
+             font-size: 11px;
+         }
+     }
+     .languageSelector {
+        font-size: 13px;
+        letter-spacing: 0;
+        font-family: 'allerregular';
+        height: 35px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 109px;
+        padding-left: 12px;
+        @media(max-width:1200px) {
+         font-size: 11px;
+     }
+     li {
+        height: 100%;
+        width: 109px;
+        margin-left: -7px;
+        span {
+            background: none;
+            color: #cecece;
             width: 109px;
-            padding-left: 12px;
+            padding-top: 7px;
+            border: none;
+            border-bottom-left-radius: 0 !important;
+            border-bottom-right-radius: 0 !important;
+            border-top-left-radius: 0 !important;
+            border-top-right-radius: 0 !important;
+            border-radius: 0;
+            height: 100%;
+            padding-left: 10px;
+            border-right: 10px solid transparent;
+            background: transparent url('../images/arrow.png') no-repeat center right;
+            &:hover {
+                background: #8cc344 url('../images/arrow-hover.png') no-repeat center right;
+                color: #FFF;
+            }
+        }
+        ul {
+            width: 110px;
+            border-bottom-left-radius: 0 !important;
+            border-bottom-right-radius: 0 !important;
+            border: none;
             li {
-                height: 100%;
-                width: 109px;
-                margin-left: -7px;
-                span {
-                    background: none;
-                    color: #cecece;
-                    width: 109px;
-                    padding-top: 7px;
+                margin-left: 0;
+                width: 94px;
+                border: none;
+                span {  
+                    color: #FFF;
                     border: none;
+                    border-radius: 0;
                     border-bottom-left-radius: 0 !important;
                     border-bottom-right-radius: 0 !important;
                     border-top-left-radius: 0 !important;
                     border-top-right-radius: 0 !important;
-                    border-radius: 0;
-                    height: 100%;
-                    padding-left: 10px;
-                    border-right: 10px solid transparent;
-                    background: transparent url('../images/arrow.png') no-repeat center right;
+                    background: #8cc344;
                     &:hover {
-                        background: #8cc344 url('../images/arrow-hover.png') no-repeat center right;
+                        background: #8cc344;
                         color: #FFF;
-                    }
-                }
-                ul {
-                    width: 110px;
-                    border-bottom-left-radius: 0 !important;
-                    border-bottom-right-radius: 0 !important;
-                    border: none;
-                    li {
-                        margin-left: 0;
-                        width: 94px;
-                        border: none;
-                        span {  
-                            color: #FFF;
-                            border: none;
-                            border-radius: 0;
-                            border-bottom-left-radius: 0 !important;
-                            border-bottom-right-radius: 0 !important;
-                            border-top-left-radius: 0 !important;
-                            border-top-right-radius: 0 !important;
-                            background: #8cc344;
-                            &:hover {
-                                background: #8cc344;
-                                color: #FFF;
-                            }
-                        }
                     }
                 }
             }
         }
     }
+}
+}
 }
 .tmenu {
     position: absolute;
@@ -452,9 +479,9 @@ a:hover {
     &:hover {
         #slider-1 {
             h1 {
-             color: #E9204A;
-         } 
-         h2 {
+               color: #E9204A;
+           } 
+           h2 {
             color: #000;
         }
     }
@@ -481,12 +508,12 @@ a:hover {
     }
 }
 #slider-1 {
- position: relative;
- top: 100px;
- width: 50%;
- height:100%;
- margin-left: 100px;
- @media(max-width:769px) {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   height:100%;
+   margin-left: 100px;
+   @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -499,9 +526,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
-   color:#898B8E;
+ color:#898B8E;
 
-   font-family: 'bree serif';
+ font-family: 'bree serif';
 
 }
 
@@ -551,7 +578,7 @@ a:hover {
 
 
 #section2 ,#section3 {
- color:#898B8E;
+   color:#898B8E;
 }
 
 .section .btn {
@@ -588,28 +615,28 @@ a:hover {
 
 }
 #twothird,#fourthird {
- background-color:#E5E5E5;
- padding-left:5%;
- padding-top:5%;
+   background-color:#E5E5E5;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
- width:100%;
- left: 0;
- text-align:center;
- display:block;
- position:absolute;
- bottom:-5px;
- -webkit-transition: all 1s ease 0s; 
- transition: all 1s ease 0s;
- .btn {
-   display:inline-block;
-   padding-top:5px;
-   font-size:15px;
-   color:#FFF;
-   background-color:#D1D2D1;
-   height:60px;
-   width:125px;
-   border-radius: 100px 100px 0 0;
+   width:100%;
+   left: 0;
+   text-align:center;
+   display:block;
+   position:absolute;
+   bottom:-5px;
+   -webkit-transition: all 1s ease 0s; 
+   transition: all 1s ease 0s;
+   .btn {
+     display:inline-block;
+     padding-top:5px;
+     font-size:15px;
+     color:#FFF;
+     background-color:#D1D2D1;
+     height:60px;
+     width:125px;
+     border-radius: 100px 100px 0 0;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -692,15 +719,15 @@ a:hover {
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-       -webkit-transform:scale(1);
-       -moz-transform:scale(1);
-       -o-transform:scale(1);
-       transform:scale(1);
-       -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-       -o-transition-duration: 1s;
-   }
-   &:hover{
+     -webkit-transform:scale(1);
+     -moz-transform:scale(1);
+     -o-transform:scale(1);
+     transform:scale(1);
+     -webkit-transition-duration: 1s;
+     -moz-transition-duration: 1s;
+     -o-transition-duration: 1s;
+ }
+ &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -708,8 +735,8 @@ a:hover {
 
     }
     .key {
-     color:#e9214b;
- }
+       color:#e9214b;
+   }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -738,22 +765,22 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
-   .key {
-     color:#e9214b;
- }
+ .key {
+   color:#e9214b;
+}
 }
 .quarter, .quarter2 {
     &:hover {
-       .overlay{
+     .overlay{
         display:none;
     }
     .outimg {
-     -webkit-transform:scale(1.1);
-     -moz-transform:scale(1.1);
-     transform:scale(1.1);
-     -o-transform:scale(1.1);
- }
- .post-navigate {
+       -webkit-transform:scale(1.1);
+       -moz-transform:scale(1.1);
+       transform:scale(1.1);
+       -o-transform:scale(1.1);
+   }
+   .post-navigate {
     bottom:0px;
 
 }
@@ -968,16 +995,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-           display: block;
-           margin: 0;
-           padding: 0;
-           top: 0;
-           position: relative;
-           min-width: none;
-           width: auto;
-       }
-   }
-   .social-block {
+         display: block;
+         margin: 0;
+         padding: 0;
+         top: 0;
+         position: relative;
+         min-width: none;
+         width: auto;
+     }
+ }
+ .social-block {
     min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
@@ -990,19 +1017,18 @@ a:hover {
         text-align: center;
     }
     p {
-       font-size: 14px;
-       width: 98%;
-       background-color: #4c4b4c;
-       margin: 0;
-       padding: 16px 17px;
-       margin-bottom: 2px;
-   }
-   .last {
+     font-size: 14px;
+     width: 98%;
+     background-color: #4c4b4c;
+     margin: 0;
+     padding: 16px 17px;
+     margin-bottom: 2px;
+ }
+ .last {
     border: none;
 }
 }
 }
-
 
 .nav-icons {
     list-style-type:none;
@@ -1018,58 +1044,78 @@ a:hover {
             list-style-type:none;
             margin-bottom: 5px;
             a {
-                background-color: @theme-black;
+                background-color:#454446; //#e8234B
                 background-repeat: no-repeat;
                 background-position: center;
                 border-radius: 35px;
                 position: relative;
                 display: inline-block;
-                width: 70px;
-                height: 70px;           
+                width: 40px;
+                height: 40px;           
                 line-height: 60px;
                 text-align: center;
 
                 span {
                     border-radius: 10px;
-                    background: @theme-black;
+                    //background: @theme-black;
                     color: @white;
-                    font-size: 14px;
-                    display: none;
-                    position: absolute;
-                    left: -95px;
+                    font-size: 18px;
+                    display: block;
+                    //left: -95px;
                     top: 0;
-                    width: 90px;
+                    //width: 90px;
                     line-height: 22px;
                     margin-top: 10px;
+                }
+                i {
+
+                    
+                    width: 22px;
+                    //height: 4px;
+                   
+                    //background: #FFFFFF;
+                    margin:0 auto !important;
+                    margin-top: 0px !important;
                 }
                 img {
                     width: 46%;
                     height: auto;
                     margin-top: 7px;
                 }
-                &:hover {
-                    span {
-                        display: block;
-                    }
-                }
+
             }
             
 
         }
-    }
-    &:hover {
-        li.plus {
+        .plus {
+            a{
+                background-color:#E8234B;
+            }
+        }
+        .subs {
             a {
-                img {
-                    .rotate(45deg);
+                width:auto;
+                height:auto;
+                padding: 2px !important;
+                span {
+                    margin:0;
+                    font-size: 14px !important;
+                    width:60px;
+                    letter-spacing: -1px !important;
+
                 }
             }
         }
     }
-    @media (max-width: 767px) {
-        right: 20px;
-    }
+
+.nav-links {
+    position: absolute;
+    bottom: 44px;
+    right: -10px !important;
+    margin-right: 0px;
+}
 }//end nav-icons
+
 .slider-caption {
     padding-right:0px;
     padding-left:0px;
@@ -1188,11 +1234,11 @@ a:hover {
             border-bottom: 1px solid #575656; 
             cursor: pointer;
             @media (max-width: 769px) {
-             box-sizing: border;
-             border-bottom: 1px solid #575656; 
-         }
-     }
- }
+               box-sizing: border;
+               border-bottom: 1px solid #575656; 
+           }
+       }
+   }
 }
 .home .footer {
     margin-top: 0;
@@ -1369,10 +1415,10 @@ a:hover {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-             color: #e91f4a;   
-         }
-     }
- }
+               color: #e91f4a;   
+           }
+       }
+   }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1471,10 +1517,10 @@ a:hover {
 
 }
 .date_filter {
-   display: inline;
-   margin:0px;
+ display: inline;
+ margin:0px;
 
-   .caret {
+ .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1564,19 +1610,19 @@ a:hover {
     }
 }
 .side-transparent-block {
- height: 150px;
- width: 280px;
- background-color: rgba(0, 0, 0, 0.8);
- position: absolute;
- display: flex;
- justify-content: center;
- align-items: center;
- text-align: center;
- top: 0;
- left: 0;
- z-index: 9;
- display: none;
- @media (max-width: 769px) {
+   height: 150px;
+   width: 280px;
+   background-color: rgba(0, 0, 0, 0.8);
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   top: 0;
+   left: 0;
+   z-index: 9;
+   display: none;
+   @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1616,10 +1662,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-               color: #e91f4a;
-           }
-       }
-   }
+             color: #e91f4a;
+         }
+     }
+ }
 }
 .subhead {
     h3 {
@@ -1643,26 +1689,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
-   display: inline-block;
-   margin-left:0px;
-   color: #807f7f;
-   font-weight: bold;
-   padding: 0;
-   border: 0px;
-   border-left:1px solid #E8E8E7;
-   height: 35px;
-   border-radius: 0;
-   width: 130px;
-   -moz-appearance: none;
-   -webkit-appearance: none;
-   -webkit-border-radius: 0px;
-   -moz-border-radius: 0px;
-   border-radius: 0px;
-   position: absolute;
-   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
-   border-right: 10px solid transparent;
+ display: inline-block;
+ margin-left:0px;
+ color: #807f7f;
+ font-weight: bold;
+ padding: 0;
+ border: 0px;
+ border-left:1px solid #E8E8E7;
+ height: 35px;
+ border-radius: 0;
+ width: 130px;
+ -moz-appearance: none;
+ -webkit-appearance: none;
+ -webkit-border-radius: 0px;
+ -moz-border-radius: 0px;
+ border-radius: 0px;
+ position: absolute;
+ background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+ border-right: 10px solid transparent;
 
-   &:hover {
+ &:hover {
     span {
         color: #FFF;
     }
@@ -1993,4 +2039,24 @@ form .btn {
     top: 0;
     z-index: 9;
     width: 100%;
+}
+.resource-logo {
+    position: fixed;
+    right: 0;
+    top: 450px;
+    @media(max-width: 769px) {
+        display: none;
+    }
+}
+.mobile-nav {
+    display: none;
+    @media(max-width: 769px) {
+        display: block;
+    }
+}
+.yamm {
+     display: block;
+    @media(max-width: 769px) {
+        display: none;
+    }
 }
