--- a/wp-content/themes/srijanalaya/less/calender.less
+++ b/wp-content/themes/srijanalaya/less/calender.less
@@ -36,7 +36,7 @@ h2 {
     .clndr
     {
         .clndr-transparent-block {
-            height: 280px;
+            height: 295px;
             width: 280px;
             background-color: rgba(0, 0, 0, 0.8);
             position: absolute;
@@ -175,7 +175,7 @@ h2 {
 
                 &.today
                 {
-                    background-color: #E3C57F;
+                    background-color: #0F70B7;
                     color: #FFF;
                 }
                 &.selected
@@ -197,6 +197,7 @@ h2 {
                 margin: 5px;
                 border: 1px solid #a2a2a2;
                 border-radius: 30px 30px;
+                opacity: 0.3;
                  @media (max-width:1159px) {
                     margin: 2px;
                     width: 25px;
