--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1808,7 +1808,12 @@ form .btn {
     top: 19px;
     height: 21px;
     width: 25px;
-    right: 27px;
+    cursor: pointer;
+}
+.project-wrapper-right-wrap {
+    .alert-icon {
+        right: 27px;
+    }
 }
 .navigation {
     visibility: hidden;
