--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -719,13 +719,13 @@ a:hover {
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
+     // -webkit-transform:scale(1);
+     // -moz-transform:scale(1);
+     // -o-transform:scale(1);
+     // transform:scale(1);
+     // -webkit-transition-duration: 1s;
+     // -moz-transition-duration: 1s;
+     // -o-transition-duration: 1s;
  }
  &:hover{
     color: #353535;
@@ -775,10 +775,10 @@ a:hover {
         display:none;
     }
     .outimg {
-       -webkit-transform:scale(1.1);
-       -moz-transform:scale(1.1);
-       transform:scale(1.1);
-       -o-transform:scale(1.1);
+       // -webkit-transform:scale(1.1);
+       // -moz-transform:scale(1.1);
+       // transform:scale(1.1);
+       // -o-transform:scale(1.1);
    }
    .post-navigate {
     bottom:0px;
