--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1467,7 +1467,7 @@ a:hover {
     display: block;
 }
 
-#custom_filters {
+#custom_filters{
     width: auto;
     height: 35px;
     padding-left: 100px;
@@ -1511,6 +1511,77 @@ a:hover {
         &:hover {
             background:#E91F4A;
             color:#ffffff;
+        }
+    }
+
+
+}
+#sliderEffects{
+    width: 25%;
+//text-align: center;
+    float: right;
+    height: 75px;
+    padding-left: 100px;
+   // background: #F2F2F2;
+    font-size: 13px;
+    letter-spacing: 0px;
+    font-family: 'Helvetica';
+    select {
+        //float: left;
+        //list-style-type: none;
+        //margin-left:0px;
+
+        color: #807f7f;
+        font-weight: bold;
+        //padding:7px 0px 5px 5px;
+        border: 0px;
+        border-left:3px solid #E8E8E7;
+        height: 25px;
+        border-radius: 0;
+        //width: 130px;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        -webkit-border-radius: 0px;
+        background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+        &:hover {
+            color: #FFF;
+            background: #E91F4A url('../images/arrow-hover.png') no-repeat center right;
+        }
+        //option {
+          //  position: absolute;
+           // top: 0;
+
+        //}
+    }
+    .btn {
+        margin: 0px;
+        background: #E91F4A;
+        color:#ffffff;
+        font-weight: normal;
+        padding:5px 0px 5px 5px;
+        border-radius: 0px;
+        &:hover {
+            background:#E91F4A;
+            color:#ffffff;
+        }
+    }
+    .duration_div {
+        position:absolute;
+        right:1%;
+       top:0;
+        text-align:right;
+        input {
+            width:30px;
+            text-align:center;
+            margin-top: 5px;
+        }
+        .btn {
+            width:auto;
+            height:auto;
+        padding-top:0;
+        padding-bottom: 0;
+        margin-right: 0px;
+        padding-right: 2px;
         }
     }
 
