--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1248,7 +1248,7 @@ a:hover {
     .banner-content {
         width: 350px;
         margin-left: 60px;
-        padding-top: 60px;
+        padding-top: 100px;
         color: #FFF;
     }
 }
@@ -1779,6 +1779,7 @@ form .btn {
     left: 0;
     color: #b8b8b8;
     padding: 10px;
+    display: none;
     .cur-month {
         padding-left: 10px;
     }
