news resource gallery videos banner

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1175,8 +1175,8 @@ a:hover {
 
 .banner {
     width: 100%;
-    background-image: url('../images/banner.png');
-    background-size: cover;
+    //background-image: url('../images/banner.png');
+    background-size: cover !important;
     height: 500px;
 }
 
