--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1069,10 +1069,10 @@ a:hover {
                 }
                 i {
 
-                    
+
                     width: 22px;
                     //height: 4px;
-                    
+
                     //background: #FFFFFF;
                     margin:0 auto !important;
                     margin-top: 0px !important;
@@ -1560,7 +1560,7 @@ height: 75px;
         font-weight: normal;
         padding:5px 0px 5px 5px;
         border-radius: 0px;
-        
+
     }
     .duration_div {
         position:absolute;
@@ -2135,4 +2135,7 @@ form .btn {
     position: absolute;
     bottom: -17px;
     left: 49.4%;
+    @media (max-width:769px) {
+        display: none;
+    }
 }
