--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -269,7 +269,7 @@ a:hover {
             margin: 0;
             padding-top: 8px; 
             font-family: 'allerregular';
-            font-size: 12px;
+            font-size: 13px;
             letter-spacing: 0;
             @media(max-width:1200px) {
              font-size: 10px;
@@ -331,7 +331,7 @@ a:hover {
             padding-top: 8px;
             font-family: 'allerregular';
             display: flex;
-            font-size: 13px;
+            font-size: 14px;
             letter-spacing: 0;
             @media(max-width:1200px) {
                font-size: 11px;
@@ -2129,6 +2129,9 @@ form .btn {
    @media(max-width: 769px) {
     display: none;
 }
+}
+.current-date {
+    display: none;
 }
 
 .circle.bottom {
