Removed home zoom effect

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -775,10 +775,10 @@ a:hover {
         display:none;
     }
     .outimg {
-       -webkit-transform:scale(1.1);
-       -moz-transform:scale(1.1);
-       transform:scale(1.1);
-       -o-transform:scale(1.1);
+       // -webkit-transform:scale(1.1);
+       // -moz-transform:scale(1.1);
+       // transform:scale(1.1);
+       // -o-transform:scale(1.1);
    }
    .post-navigate {
     bottom:0px;
