DB Dump admin Modification

--- a/wp-content/themes/srijanalaya/less/admin.less
+++ b/wp-content/themes/srijanalaya/less/admin.less
@@ -80,10 +80,10 @@ input, select {
     color: #777777;
 }
 .wp-core-ui .button-secondary:focus, .wp-core-ui .button-secondary:hover, .wp-core-ui .button.focus, .wp-core-ui .button.hover, .wp-core-ui .button:focus, .wp-core-ui .button:hover {
-   border-radius: 0;
-   border: 1px solid #E8234B;
-   color: #777777;
-   background-color: rgba(232, 35, 75, 0.77);
+ border-radius: 0;
+ border: 1px solid #E8234B;
+ color: #777777;
+ background-color: rgba(232, 35, 75, 0.77);
 }
 
 .wp-admin #footer-ozh-oam, .wp-admin #wpcf-marketing, #dashboard_right_now,  #dashboard_activity, #dashboard_quick_press, .wp-admin #footer-upgrade, #welcome-panel, #screen-meta-links, #screen-meta, .view-switch {
@@ -105,3 +105,6 @@ input, select {
     background-color: #E8234B;
 }
 
+#myid {
+    width: 50px;
+}
