--- a/wp-content/themes/srijanalaya/less/calender.less
+++ b/wp-content/themes/srijanalaya/less/calender.less
@@ -133,8 +133,8 @@ h2 {
                 margin: 5px;
                 margin-bottom: 10px;
                 color: #e91f4a;
-                border: 1px solid #ebebeb;
-                border-radius: 30px 30px;
+                //border: 1px solid #ebebeb;
+                //border-radius: 30px 30px;
                 font-family: 'bree serif' 'sans-serif';
                 display: flex;
                 align-items: center;
