--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -157,6 +157,10 @@ a:hover {
     }
 }  
 //Yamm Fix
+.yamm .yamm-content {
+    padding:10px 30px !important;
+    padding-top: 15px !important;
+}
 .yamm .yamm-content a,
 .yamm .yamm-content a:hover,
 .yamm .yamm-content a:focus {
@@ -210,11 +214,11 @@ a:hover {
     border: none;
 }
 .dropdown-menu {
-    background-color: #8cc344 !important;
-    padding-top: 25px !important;
+    background-color: rgba(0,0,0,0.95) !important;
+    padding-top: 15px !important;
     a {
-       color: #FFF !important;
-   }  
+     color: #FFF !important;
+ }  
 }
 #myNavbar {
     background: rgb(39, 36, 37);
@@ -235,7 +239,7 @@ a:hover {
             margin-left: 0;
         }
         .dropdown-menu {
-          padding: 0 0 2% 8%;
+          padding: 0 0 0.5% 8% !important;
           margin-top: -3px !important;
           ul {
             border-right: 1px Solid rgba(255, 255, 255, 0.21);
@@ -272,23 +276,23 @@ a:hover {
             font-size: 13px;
             letter-spacing: 0;
             @media(max-width:1200px) {
-               font-size: 10px;
-           }
-           @media(max-width:900px) {
-               font-size: 8px;
-           }
-           .caret {
+             font-size: 10px;
+         }
+         @media(max-width:900px) {
+             font-size: 8px;
+         }
+         .caret {
             position: absolute;
             right: 8px;
             top: 15px;
             @media(max-width:800px) {
-               right: 8px;
-           }
-       }
-   }
-   &:hover {
+             right: 8px;
+         }
+     }
+ }
+ &:hover {
     .dropdown-menu {
-        background-color: #8cc344;
+        background-color: rgba(0, 0, 0, 0.5);
         li {
             &:last-child {
                 border-right: none;
@@ -296,8 +300,11 @@ a:hover {
         }
     }
     a {
-        background-color: #8cc344;
+        background-color:rgba(0,0,0,0.3);
         color:#FFF;
+        &:hover {
+            color:red !important;
+        }
     }
 }
 &:last-child {
@@ -334,10 +341,10 @@ a:hover {
             font-size: 14px;
             letter-spacing: 0;
             @media(max-width:1200px) {
-             font-size: 11px;
-         }
-     }
-     .languageSelector {
+               font-size: 11px;
+           }
+       }
+       .languageSelector {
         font-size: 13px;
         letter-spacing: 0;
         font-family: 'allerregular';
@@ -348,9 +355,9 @@ a:hover {
         width: 109px;
         padding-left: 12px;
         @media(max-width:1200px) {
-         font-size: 11px;
-     }
-     li {
+           font-size: 11px;
+       }
+       li {
         height: 100%;
         width: 109px;
         margin-left: -7px;
@@ -368,9 +375,10 @@ a:hover {
             height: 100%;
             padding-left: 10px;
             border-right: 10px solid transparent;
-            background: transparent url('../images/arrow.png') no-repeat center right;
+            background-color:rgba(0, 0, 0, 0.3) !important; 
+
             &:hover {
-                background: #8cc344 url('../images/arrow-hover.png') no-repeat center right;
+                background: rgba(255,255,255,0.6) !important;
                 color: #FFF;
             }
         }
@@ -402,6 +410,7 @@ a:hover {
     }
 }
 }
+
 }
 .tmenu {
     position: absolute;
@@ -418,11 +427,11 @@ a:hover {
     right: 105px;
     padding-left: 20px;
     &:hover {
-        background: #8cc344;
-        a {
-            color: #FFF;
-        }
+       background-color: rgba(0,0,0,0.95) !important;
+       a {
+        color: #FFF;
     }
+}
 }
 .fmenu {
     position: absolute;
@@ -431,7 +440,7 @@ a:hover {
     width: 60px !important;
     padding-left: 10px;
     &:hover {
-        background-color: #8cc344 !important;
+        background-color: rgba(0,0,0,0.95) !important;
         a {
             color: #FFF !important;
         }
@@ -479,9 +488,9 @@ a:hover {
     &:hover {
         #slider-1 {
             h1 {
-               color: #E9204A;
-           } 
-           h2 {
+             color: #E9204A;
+         } 
+         h2 {
             color: #000;
         }
     }
@@ -508,12 +517,12 @@ a:hover {
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   height:100%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ height:100%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -526,9 +535,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
- color:#898B8E;
+   color:#898B8E;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -578,7 +587,7 @@ a:hover {
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -615,28 +624,28 @@ a:hover {
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:-5px;
-   -webkit-transition: all 1s ease 0s; 
-   transition: all 1s ease 0s;
-   .btn {
-     display:inline-block;
-     padding-top:5px;
-     font-size:15px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:60px;
-     width:125px;
-     border-radius: 100px 100px 0 0;
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:-5px;
+ -webkit-transition: all 1s ease 0s; 
+ transition: all 1s ease 0s;
+ .btn {
+   display:inline-block;
+   padding-top:5px;
+   font-size:15px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:60px;
+   width:125px;
+   border-radius: 100px 100px 0 0;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -719,15 +728,15 @@ a:hover {
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
- }
- &:hover{
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -735,8 +744,8 @@ a:hover {
 
     }
     .key {
-       color:#e9214b;
-   }
+     color:#e9214b;
+ }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -765,13 +774,13 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .quarter, .quarter2 {
     &:hover {
-     .overlay{
+       .overlay{
         display:none;
     }
     .outimg {
@@ -995,16 +1004,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-         display: block;
-         margin: 0;
-         padding: 0;
-         top: 0;
-         position: relative;
-         min-width: none;
-         width: auto;
-     }
- }
- .social-block {
+           display: block;
+           margin: 0;
+           padding: 0;
+           top: 0;
+           position: relative;
+           min-width: none;
+           width: auto;
+       }
+   }
+   .social-block {
     min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
@@ -1017,14 +1026,14 @@ a:hover {
         text-align: center;
     }
     p {
-     font-size: 14px;
-     width: 98%;
-     background-color: #4c4b4c;
-     margin: 0;
-     padding: 16px 17px;
-     margin-bottom: 2px;
- }
- .last {
+       font-size: 14px;
+       width: 98%;
+       background-color: #4c4b4c;
+       margin: 0;
+       padding: 16px 17px;
+       margin-bottom: 2px;
+   }
+   .last {
     border: none;
 }
 }
@@ -1169,6 +1178,7 @@ a:hover {
     margin-top:-35px;
     .header-text{
         margin:3% 3%;
+        margin-top:5%;
 
     }
 }
@@ -1234,11 +1244,11 @@ a:hover {
             border-bottom: 1px solid #575656; 
             cursor: pointer;
             @media (max-width: 769px) {
-               box-sizing: border;
-               border-bottom: 1px solid #575656; 
-           }
-       }
-   }
+             box-sizing: border;
+             border-bottom: 1px solid #575656; 
+         }
+     }
+ }
 }
 .home .footer {
     margin-top: 0;
@@ -1250,10 +1260,12 @@ a:hover {
         margin-left: 60px;
         padding-top: 100px;
         color: #FFF;
+        margin-top: 3%;
     }
 }
 
 #map {
+    margin-top: 40px !important;
     width: 100%;
     height: 450px;
 }
@@ -1416,10 +1428,10 @@ a:hover {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-               color: #e91f4a;   
-           }
-       }
-   }
+             color: #e91f4a;   
+         }
+     }
+ }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1498,9 +1510,14 @@ a:hover {
         }
         option {
             position: absolute;
-            top: 0;
+            top: 0; 
+
 
         }
+    }
+    ul {
+
+
     }
     .btn {
         margin: 0px;
@@ -1588,10 +1605,10 @@ height: 75px;
 
 }
 .date_filter {
- display: inline;
- margin:0px;
+   display: inline;
+   margin:0px;
 
- .caret {
+   .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1681,19 +1698,19 @@ height: 75px;
     }
 }
 .side-transparent-block {
-   height: 150px;
-   width: 280px;
-   background-color: rgba(0, 0, 0, 0.8);
-   position: absolute;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   text-align: center;
-   top: 0;
-   left: 0;
-   z-index: 9;
-   display: none;
-   @media (max-width: 769px) {
+ height: 150px;
+ width: 280px;
+ background-color: rgba(0, 0, 0, 0.8);
+ position: absolute;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ top: 0;
+ left: 0;
+ z-index: 9;
+ display: none;
+ @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1733,10 +1750,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-             color: #e91f4a;
-         }
-     }
- }
+               color: #e91f4a;
+           }
+       }
+   }
 }
 .subhead {
     h3 {
@@ -1760,34 +1777,38 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
- display: inline-block;
- margin-left:0px;
- color: #807f7f;
- font-weight: bold;
- padding: 0;
- border: 0px;
- border-left:1px solid #E8E8E7;
- height: 35px;
- border-radius: 0;
- width: 130px;
- -moz-appearance: none;
- -webkit-appearance: none;
- -webkit-border-radius: 0px;
- -moz-border-radius: 0px;
- border-radius: 0px;
- position: absolute;
- background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
- border-right: 10px solid transparent;
+   display: inline-block;
+   margin-left:0px;
+   color: #807f7f;
+   font-weight: bold;
+   padding: 0;
+   border: 0px;
+   border-left:1px solid #E8E8E7;
+   height: 35px;
+   border-radius: 0;
+   width: 130px;
+   -moz-appearance: none;
+   -webkit-appearance: none;
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   position: absolute;
+   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+   border-right: 10px solid transparent;
 
- &:hover {
+   &:hover {
     span {
         color: #FFF;
     }
     .transformSelectDropdown  {
         display: block;
+        -webkit-box-shadow: 1px 10px 28px -7px rgba(84,77,84,1);
+        -moz-box-shadow: 1px 10px 28px -7px rgba(84,77,84,1);
+        box-shadow: 1px 10px 28px -7px rgba(84,77,84,1);
     }
     background: #E91F4A url('../images/arrow-hover.png') no-repeat center right;
 }
+
 @media(max-width:550px) {
     width: 100px;
 }
@@ -1798,7 +1819,17 @@ form .btn {
 .transformSelect3 {
     left: 345px;
     border-right: 1px solid #E8E8E7 !important;
+    .drop-on {
+        display: block !important;
+        z-index: 99 !important;
+    }
+    .drop-off {
+        display: none !important;
+        z-index: 1;
+    }
+ 
 }
+
 #clickMe {
     position: absolute;
     left: 475px;
@@ -1856,10 +1887,12 @@ form .btn {
 }
 .transformSelect3 {
     li {
+        font-family: 'helvetica' !important;
         .transformSelectDropdown li span span {
             margin: 0;
             padding-left: 0 !important;
             display: block;
+
         }
         .btn {
             display: block;
@@ -1869,6 +1902,7 @@ form .btn {
             width: 45px !important;
             margin-right: 5px;
         }
+
     }
 }
 .sidediv h2 {
@@ -1936,6 +1970,7 @@ form .btn {
     background: #000;
     width: 100%;
     height: 100%;
+    right:0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2060,7 +2095,7 @@ form .btn {
     justify-content: center;
     cursor: pointer;
     align-items: center;
-    margin-right: 20px;
+    margin-right: 40px;
     i {
         color: #e91f4a;
         font-size: 32px;
@@ -2106,7 +2141,7 @@ form .btn {
         color: #FFF;
         cursor: pointer;
     }
-    .fa-caret-up {
+    .fa-caret-ups {
         display: none;
     }
 }
@@ -2131,8 +2166,8 @@ form .btn {
     }
 }
 .yamm {
- display: block;
- @media(max-width: 769px) {
+   display: block;
+   @media(max-width: 769px) {
     display: none;
 }
 }
@@ -2147,4 +2182,42 @@ form .btn {
     @media (max-width:769px) {
         display: none;
     }
+    .transformSelect144 {
+        width:10px !important;
+    }
+}
+.locale_entry {
+    background-color: #e9e9e9;
+    label{
+    margin: 20px auto;
+    display: inline-block;
+    float: left;
+    clear: left;
+    width: 250px;
+    text-align: right;
+}
+input {
+  display: inline-block;
+  float: left;
+  height:20px;
+  margin: 20px auto;
+}
+//text-align: center;
+.btn {
+    margin: 10px auto;
+    float: initial;
+    display: block;
+    clear: both;
+
+
+}
+.warning {
+    color:red;
+}
+.suggestion {
+    color:yellow;
+}
+.green {
+    color:green;
+}
 }
