--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -379,82 +379,7 @@ li {
             background: #E9204A !important;
         }
        }
-       .languageSelector {
-        font-size: 13px;
-        letter-spacing: 0;
-        font-family: 'allerregular';
-        height: 35px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 109px;
-        padding-left: 12px;
-        background:transparent linear-gradient(0deg, #231F20 35%, #46464A 100%) repeat scroll 0% 0%;
-        @media(max-width:1200px) {
-           font-size: 11px;
-
-       } 
-       li {
-        height: 100%;
-        width: 109px;
-        margin-left: -7px;
-        span {
-            background: none;
-            color: #cecece;
-            width: 109px;
-            padding-top: 7px;
-            border: none;
-            border-bottom-left-radius: 0 !important;
-            border-bottom-right-radius: 0 !important;
-            border-top-left-radius: 0 !important;
-            border-top-right-radius: 0 !important;
-            border-radius: 0;
-            height: 100%;
-            padding-left: 10px;
-            border-right: 10px solid transparent;
-          //  background-color:rgba(0, 0, 0, 0.9) !important; 
-
-          &:hover {
-            background: #E9204A !important;
-            color: #FFF;
-        }
-    }
-    ul {
-        width: 110px;
-        border-bottom-left-radius: 0 !important;
-        border-bottom-right-radius: 0 !important;
-        border: none;
-        li {
-            margin-left: 0;
-            width: 94px;
-            border: none;
-            span {  
-                color: #FFF;
-                border: none;
-                border-radius: 0;
-                border-bottom-left-radius: 0 !important;
-                border-bottom-right-radius: 0 !important;
-                border-top-left-radius: 0 !important;
-                border-top-right-radius: 0 !important;
-                background: rgba(0, 0, 0, 0.9);
-                &:hover {
-                    background: #8cc344;
-                    color: #FFF;
-                }
-            }
-        }
-    }
-    .open {
-        span {
-            background-color: rgba(0, 0, 0, 0.5) !important;
-          &:hover {
-              color:#E9204A !important;
-          }
-        }
-    }
-
-}
-}
+ 
 }
 
 }
@@ -513,7 +438,9 @@ li {
     margin-right:0px;
 }
 #section1 {
+    height:10px !important;
     .fp-tableCell {
+        height: 10px !important;
         vertical-align: inherit;
         margin-top: 80px;
     }
